# xero-rs-async

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: auth.rs  client.rs  error.rs  http.rs  lib.rs  rate_limiter.rs  util.rs
src/api/: mod.rs
src/api/accounting/: accounts.rs  attachments.rs  bank_transactions.rs  bank_transfers.rs  batch_payments.rs  branding_themes.rs  budgets.rs  contact_groups.rs  contacts.rs  credit_notes.rs  currencies.rs  employees.rs  expense_claims.rs  history.rs  invoice_reminders.rs  items.rs  journals.rs  linked_transactions.rs  manual_journals.rs  mod.rs  organisation.rs  overpayments.rs  payment_services.rs  payments.rs  prepayments.rs  purchase_orders.rs  query.rs  quotes.rs  receipts.rs  repeating_invoices.rs  tax_rates.rs  tracking_categories.rs  users.rs
src/api/bank_feeds/: feed_connections.rs  mod.rs  statements.rs
src/api/payroll_au/: earnings_rates.rs  employees.rs  leave_applications.rs  mod.rs  pay_items.rs  pay_runs.rs  pay_slips.rs  payroll_calendars.rs  settings.rs  super_fund_products.rs  super_funds.rs  timesheets.rs
src/api/payroll_nz/: deductions.rs  earnings_rates.rs  employee_leave_periods.rs  employee_leave_setup.rs  employee_leave_types.rs  employee_opening_balances.rs  employee_pay_templates.rs  employee_tax.rs  employee_working_patterns.rs  employees.rs  employment.rs  leave.rs  leave_balances.rs  leave_types.rs  mod.rs  pay_run_calendars.rs  pay_runs.rs  pay_slips.rs  payment_methods.rs  reimbursements.rs  salary_and_wages.rs  settings.rs  statutory_deductions.rs  superannuation.rs  timesheets.rs  tracking_categories.rs
src/api/payroll_uk/: deductions.rs  earnings_orders.rs  earnings_rates.rs  employee_leave.rs  employee_leave_balances.rs  employee_leave_periods.rs  employee_leave_types.rs  employee_opening_balances.rs  employee_pay_templates.rs  employee_statutory_leave_balance.rs  employee_statutory_leaves_summary.rs  employee_statutory_sick_leave.rs  employee_tax.rs  employee_working_patterns.rs  employees.rs  employer_pensions.rs  employment.rs  leave_types.rs  mod.rs  pay_run_calendars.rs  pay_runs.rs  pay_slips.rs  payment_methods.rs  reimbursements.rs  salary_and_wages.rs  settings.rs  timesheets.rs  tracking_categories.rs
src/api/practice_manager/: categories.rs  client_groups.rs  clients.rs  costs.rs  custom_fields.rs  invoices.rs  jobs.rs  mod.rs  quotes.rs  staff.rs  tasks.rs  templates.rs  time.rs
src/api/projects/: mod.rs  projects.rs  tasks.rs  time_entries.rs  users.rs
src/endpoints/: accounting.rs  assets.rs  files.rs  mod.rs  tenanted.rs
src/models/: mod.rs
src/models/accounting/: account.rs  attachment.rs  bank_transaction.rs  bank_transfer.rs  batch_payment.rs  branding_theme.rs  budget.rs  common.rs  contact.rs  contact_group.rs  currency.rs  (+24 more)
tests/: accounting_get.rs  assets_get.rs  common.rs  files_get.rs  report_serialization_test.rs
(+108 files in other folders)
