[package]
name = "xero-rs-async"
version = "0.1.0"
edition = "2021"
description = "An unofficial, asynchronous Rust SDK for the Xero API, with built-in OAuth 2.0 and rate limiting."
authors = ["Noah Clarkson <mrnoahclarkson@gmail.com>"] 
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/noahbclarkson/xero-rs-async"
homepage = "https://github.com/noahbclarkson/xero-rs-async" 
documentation = "https://docs.rs/xero-rs-async" 
keywords = ["xero", "api", "async", "accounting", "oauth2"]
categories = ["api-bindings", "asynchronous", "web-programming::api-client"]

[[bin]]
name = "auth"
path = "src/bin/auth.rs"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["fs", "sync", "macros", "rt-multi-thread"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
dashmap = "6.1"
urlencoding = "2.1.3"
dotenvy = "0.15.7"
url = "2.5.4"
tiny_http = "0.12"
webbrowser = "1.0.5"
log = "0.4.27"

[dev-dependencies]
env_logger = "0.11.8"