[package]
name = "xero-rs-async"
version = "0.1.0"
edition = "2021"
description = "An unofficial, asynchronous Rust SDK for the Xero API, with built-in OAuth 2.0 and rate limiting."
authors = ["Noah Clarkson <mrnoahclarkson@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/noahbclarkson/xero-rs-async"
homepage = "https://github.com/noahbclarkson/xero-rs-async"
documentation = "https://docs.rs/xero-rs-async"
keywords = ["xero", "api", "async", "accounting", "oauth2"]
categories = ["api-bindings", "asynchronous", "web-programming::api-client"]

[[bin]]
name = "auth"
path = "src/bin/auth.rs"
required-features = ["auth-cli"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["fs", "sync", "macros", "rt-multi-thread"] }
uuid = { version = "1.21", features = ["v4", "serde"] }
dashmap = "6.1"
urlencoding = "2.1.3"
dotenvy = { version = "0.15.7", optional = true }
url = "2.5"
tiny_http = { version = "0.12", optional = true }
webbrowser = { version = "1.1.0", optional = true }
log = "0.4"
quick-xml = { version = "0.39.2", features = ["serialize"] }

[features]
default = ["accounting"]
accounting = []
auth-cli = ["dep:dotenvy", "dep:tiny_http", "dep:webbrowser"]
assets = []
files = []
projects = []
payroll-au = []
payroll-uk = []
payroll-nz = []
bank-feeds = []
practice-manager = []

[dev-dependencies]
dotenvy = "0.15.7"
env_logger = "0.11"
